# 04-13-2025_speech-to-text-mac

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  stdout  test.py  verify.py  whispercpp-audio-test.m4a  whispercpp-audio-test.save
WhisperCore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/: .env  .gitignore  backend.py  main.py  mongodb.conf  requirements.txt  setup.sh
backend/api/: storage.py  streaming.py  stt.py
backend/models/: __init__.py  conversation.py  conversation_chunk.py  segment.py  user.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: AudioRecorder.tsx  Conversation.tsx  ConversationContent.tsx  ConversationSidebar.tsx  Message.tsx  icons.tsx
frontend/app/components/styles/: audio.module.css  conversation.module.css
frontend/app/styles/: page.module.css
